# mote-ros

./: .clang-tidy  .gitignore  README.md  justfile  pixi.toml
.github/workflows/: build-test.yaml
mote_control/: CMakeLists.txt  mote_control.xml  package.xml
mote_control/bringup/config/: mote_controllers.yaml
mote_control/bringup/launch/: mote.launch.py
mote_control/description/launch/: view_robot.launch.py
mote_control/description/ros2_control/: mote.ros2_control.xacro
mote_control/description/urdf/: mote.urdf.xacro  mote_description.urdf.xacro
mote_control/test/: test_mote_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
mote_description/: CMakeLists.txt  package.xml
mote_description/mote/urdf/: mote.urdf.xacro
