<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mote_control</name>
  <version>0.0.0</version>
  <description>ros2_control controller for Mote</description>
  <maintainer email="michael@michael-crum.com">Michael Crum</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>libglfw3-dev</depend>
  <depend>mujoco_vendor</depend>
  <depend>pluginlib</depend>
  <depend>python3-pykdl</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>transmission_interface</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <exec_depend>python3-venv</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
