<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mote_description</name>
  <version>0.0.0</version>
  <description>Package with URDF and description files of Mote.</description>

  <maintainer email="michael@michael-crum.com">Michael Crum</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
